# krakenapi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  KRAKENAPI.cbp  Makefile  Project.ede  cmake_install.cmake  compile.sh  kph  kph.cpp  kprocessing_data.cpp  kpublic_test  kpublic_test.cpp  krt  krt.cpp  kstatistics  kstatistics.cpp  kstatistics.cpp~  kutils.hpp  main.cpp  statistics_client.cpp~
KRAKEN_DIR/: Makefile  cmake_install.cmake
kraken/: CMakeCache.txt  Makefile  Project.ede  kassets.cpp  kassets.hpp  kclient.cpp  kclient.hpp  kohlc.cpp  kohlc.hpp  korder.cpp  korder.cpp~  korder.hpp  korderbook.cpp  korderbook.cpp~  korderbook.hpp  kplot.cpp  kplot.cpp~  kplot.hpp  kplot.hpp~  kspread.cpp  kspread.cpp~  kspread.hpp  ktrade.cpp  ktrade.hpp  kutils.cpp  kutils.hpp  shovel.txt
libjson/_internal/Source/JSONDefs/: GNU_C.h
